remove parâmetro que causou a aplicação não subir